--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <img class="image-qr-code" src="/Users/harryk/Downloads/qr-code-component-main/images/image-qr-code.png"
-                alt="">
+            <img class="image-qr-code" src="/Users/harryk/Documents/GitHub/QR_challenge/image-qr-code.png" alt="">
             <div class="text">
                 <h2> Improve your front-end skills by building projects </h2>
                 <span>Scan the QR code to visit Frontend
